[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tutorial.gd" type="Script" id=2]

[node name="Game" instance=ExtResource( 1 )]

[node name="Spawner" parent="." index="8"]
enabled = false

[node name="Tutorial" type="Node" parent="." index="12"]
script = ExtResource( 2 )

[node name="TutorialDoneTimer" type="Timer" parent="Tutorial" index="0"]
wait_time = 4.0
[connection signal="done" from="Tutorial" to="." method="_on_Tutorial_done"]
[connection signal="set_label" from="Tutorial" to="." method="_on_Tutorial_set_label"]
[connection signal="spawn_enemy" from="Tutorial" to="." method="_on_Tutorial_spawn_enemy"]
[connection signal="timeout" from="Tutorial/TutorialDoneTimer" to="Tutorial" method="_on_TutorialDoneTimer_timeout"]
